--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
           </div>
         </div>
       </section>
-      <script src="index.js"></script>
+      <script src="js/index.js"></script>
       <script src="js/main.js"></script>
 </body>
 </html>
