--- a/Login.html
+++ b/Login.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     
+    
     <div id="login">
         <h3 class="text-center text-white pt-5">Login form</h3>
         <div class="container">
@@ -47,5 +48,15 @@
             </div>
         </div>
     </div>  
+    <div id="logout">
+        <h3 class="text-center  pt-5">User is already logged in with: <span style="color: blue;" id="loggedinUser"> </span></h3>
+        <div class="container">
+            <div class="form-group text-center">   
+                <input type="button" name="logout" onclick="logout()" class="btn btn-info btn-lg" value="Logout"  />
+                <input type="button"   name="Home" onclick="loadBoard()" class="btn btn-info btn-lg" value="Go to Dashboard"  />
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
